apps/redlib/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: redlib
  namespace: redlib
spec:
  parentRefs:
    - name: gateway-internal
      namespace: gateway
  hostnames:
  - "redlib.example.com"
  rules:
  - matches:
    - path:
        type: Prefix
        value: /
    backendRefs:
    - name: redlib
      port: 8080
